--- a/css/global.css
+++ b/css/global.css
@@ -1,4 +1,4 @@
-@import url("http://fonts.googleapis.com/css?family=OpenSans:300italic,400italic,600italic,300,700,400,600");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
 
 * {
 	margin: 0;
@@ -7,7 +7,7 @@
 }
 
 body {
-  font-family: sans-serif;
+  font-family: "Inter", sans-serif;
   font-size: 14px;
   line-height: 1.428571429;
   color: #333333;
@@ -18,19 +18,19 @@ a {
 	text-decoration: none;
 }
 
-div#header {
+/* div#header {
 	width: 100%;
 	height: 125px;
 	background-color: #5E4C8A;
 	/*background-color: #2779A6;
 	background-color: #ffa500;
-	background-color: #58546D;*/
+	background-color: #58546D;
 	margin: 0 auto;
 	padding-top: 10px;
 	padding-left: 20px;
-}
+} */
 
-.logo {
+/* .logo {
 	float: left;
 	margin-top: 15x;
 	margin-left: 30px;
@@ -38,9 +38,9 @@ div#header {
 }
 
 .logo img {
-	width: 120px;
-	height: 120px;
-	margin-top: -60px;
+	width: 300px;
+	height: 250px;
+	margin-top: -80px;
 	margin-bottom: 30px;
 }
 
@@ -51,6 +51,17 @@ div#header {
 
 .logo a span {
 	font-weight: 300px;
+} */
+
+.logo-new img{
+  width: 280px;
+  height: 250px;
+  margin-top: -60px;
+  margin-left: -10px;
+}
+.logo-new{
+  display: flex;
+  justify-content: center;
 }
 
 div#container {
@@ -61,25 +72,25 @@ div#container {
 .sidebar {
 	width: 225px;
 	height: 200%;
-	background-color: #42444C;
+	background-color: #F6F6F4;
 	float: left;
 	list-style: none;
 }
 
-ul#nav {
+/* ul#nav {
 
-}
+} */
 
 ul#nav li {
 	list-style: none;
 }
 
 ul#nav li a {
-	color: #ccc;
+	color: #636363;
 	display: block;
-	padding: 10px;
+	padding: 20px;
 	font-size: 0.9em;
-	border-bottom: 1px solid #0A0A0A;
+	/* border-bottom: 1px solid #0A0A0A; */
 		-webkit-transition-: 0.2s;
 		-moz-transition-: 0.2s;
 		-o-transition-: 0.2s;
@@ -100,11 +111,13 @@ ul#nav li a.selected {
 .content {
 	width: auto;
 	margin-left: 230px;
-	margin-top: 15px;
+	/* margin-top: 15px; */
 	height: auto;
-	background-color: #FFF;
-	color: #282828;
-	padding: 15px;
+	/* background-color: #FFF; */
+	color:  white;
+	padding: 40px 30px;
+  background: linear-gradient(90.3deg, #034694 27.38%, #01162E 99.45%);
+  min-width: 800px;
 }
 
 .content p {
@@ -119,7 +132,7 @@ div#box {
 div#box .box-top {
 	color: #fff;
 	font-weight: bold;
-	background-color: #E18551;
+	background-color: #034694;
 	padding: 5px;
 	padding-left: 30px;
 	font-weight: 300;
@@ -127,7 +140,7 @@ div#box .box-top {
 
 div#box .box-panel {
 	padding: 15px;
-	background-color: #f2f2f2;
+	background-color: #F6F6F4;
 	color: #333;
 	padding-left: 30px;
 	text-align: justify;
@@ -148,25 +161,28 @@ table {
 
 .table-bordered {
   border: 1px solid #060808;
-	border-top-width: 2px;
-	border-bottom-width: 2px;
+	/* border-top-width: 2px; */
+	/* border-bottom-width: 2px; */
+}
+table#table-style{
+  background-color: white;
 }
 
-.table-bordered > thead > tr > th,
+/* .table-bordered > thead > tr > th,
 .table-bordered > tbody > tr > th,
 .table-bordered > tfoot > tr > th,
 .table-bordered > thead > tr > td,
 .table-bordered > tbody > tr > td,
 .table-bordered > tfoot > tr > td {
-  border: 1px solid #060808;
-}
+   border: 1px solid #060808; 
+} */
 .table-bordered > thead > tr > th,
 .table-bordered > thead > tr > td {
   border-bottom-width: 2px;
 }
 
 thead {
-	background-color: #E18551;
+	background-color: #034694;
 	color: #fff;
 	font-size: 15px;
 }
@@ -335,14 +351,36 @@ input[type="search"] {
 }
 
 .btn {
-	padding: 10px 10px;
+	padding: 12px 18px;
 	cursor: pointer;
 	color: #fff;
 	font-weight: normal;
 	font-family: Helvetica;
 	border-radius: 4px;
 	border: none;
-	background-color: #0000ff;
+	background-color: #034694;
+	margin-bottom: 20px;
+}
+.btn-save {
+	padding: 12px 18px;
+	cursor: pointer;
+	color: #fff;
+	font-weight: normal;
+	font-family: Helvetica;
+	border-radius: 4px;
+	border: none;
+	background-color: green;
+	margin-bottom: 20px;
+}
+.btn-delete {
+	padding: 12px 18px;
+	cursor: pointer;
+	color: #fff;
+	font-weight: normal;
+	font-family: Helvetica;
+	border-radius: 4px;
+	border: none;
+	background-color: red;
 	margin-bottom: 20px;
 }
 
@@ -353,7 +391,7 @@ input[type="search"] {
 	font-weight: normal;
 	border-radius: 4px;
 	border: none;
-	background-color: green;
+	background-color: #034694;
 	margin-bottom: 20px;
 }
 
