--- a/css/login-style.css
+++ b/css/login-style.css
@@ -3,25 +3,28 @@ body{
 	padding: 0;
 	font-family: sans-serif;
 	/* background: url("../img/bekgron.png") no-repeat; */
+	background: linear-gradient(90.3deg, #034694 27.38%, #01162E 99.45%);
 }
 
 .login-box{
-	width: 300px;
+	width: 600px;
 	position: absolute;
-	top: 55%;
-	left: 20%;
+	top: 50%;
+	left: 50%;
 	transform: translate(-50%, -50%);
 	color: white;
+	padding: 50px;
+	/* background-color: #034694; */
 }
 
 .login-box h1{
 	float: left;
 	font-size: 40px;
-	color: #282828;
+	color: white;
 	/*border-bottom: 6px solid #4caf50;*/
-	border-bottom: 6px solid #3465a4;
-	margin-bottom: 50px;
-	padding: 13px 0;
+	/* border-bottom: 6px solid #3465a4; */
+	margin-bottom: 20px;
+	padding: 13px 245px;
 }
 
 .textbox{
@@ -29,15 +32,15 @@ body{
 	overflow: hidden;
 	font-size: 20px;
 	padding: 8px 0;
-	margin: 8px 0;
+	margin: 10px 0;
 	border-bottom: 1px solid #282828;
 }
 
 .textbox input {
-	height: 40px;
-	width : 300px;
+	height: 50px;
+	width : 600px;
 	background: none;
-	font-size: 16px;
+	font-size: 18px;
 	border: none;
 	margin-bottom: 0px;
 	border-radius: 4px;
@@ -47,14 +50,14 @@ body{
 }
 
 .btn {
-	padding: 10px 30px;
-	margin-left: 150px;
+	padding: 15px 265px;
+	/* margin-left: 150px; */
 	margin-top: 10px;
 	cursor: pointer;
 	color: #fff;
-	border-radius: 4px;
+	border-radius: 50px;
 	border: none;
-	background-color: #2F5A78;
+	background-color: #1F41EB;
 	/*background-color: rgba(112, 100, 134, 1.0);*/
 	margin-bottom: 20px;
 }
